--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "better-sqlite3": "^12.6.2",
+    "lucide-react": "^0.574.0",
     "openai": "^6.22.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
