--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@abandonware/noble": "^1.9.2-26",
     "better-sqlite3": "^12.6.2",
+    "dotenv": "^17.3.1",
     "lucide-react": "^0.574.0",
     "openai": "^6.22.0",
     "react": "^18.2.0",
