--- a/package.json
+++ b/package.json
@@ -17,8 +17,7 @@
     "openai": "^6.22.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^7.13.0",
-    "ws": "^8.19.0"
+    "react-router-dom": "^7.13.0"
   },
   "devDependencies": {
     "@electron/rebuild": "^4.0.3",
